# tree-depth-project

./: .gitmodules  CMakeLists.txt  README.md  test-sallow.cpp  tree_depth.cpp  tree_depth.hpp
src/: environment.cpp  environment.h  flowCutter.cpp  graph.h  greedy.cpp  mainAlgo.cpp  mainAlgo.h  simpleCutter.cpp  tinyGraphDB.cpp  utils.h
